# deep-focus

./: .gitignore  .gitmodules  README.md  todo.txt
firmware/common/global/include/: global.h
firmware/common/wifi_config_ap/: CMakeLists.txt  Kconfig
firmware/common/wifi_config_ap/include/: wifi_config_ap.h
firmware/common/wifi_config_ap/src/: wifi_config_ap.c
firmware/common/wifi_connect/: CMakeLists.txt  Kconfig
firmware/common/wifi_connect/include/: wifi_connect.h
firmware/common/wifi_connect/src/: wifi_connect.c
firmware/common/wifi_nvs/: CMakeLists.txt
firmware/common/wifi_nvs/include/: wifi_nvs.h
firmware/common/wifi_prov_http/: CMakeLists.txt
firmware/esp32/: CMakeLists.txt  sdkconfig.old
firmware/esp32/include/: app_config.h  app_runtime.h  dht11_reader.h  i2c_oled_display.h
firmware/esp32/main/: CMakeLists.txt  app_runtime.c  main.c
firmware/esp32/src/: dht11_reader.c  global.c  i2c_oled_display.c  uart_bridge.c
firmware/esp_idf_shared_components/global/: CMakeLists.txt
firmware/esp_idf_shared_components/wifi_connect/: CMakeLists.txt
firmware/gateway_esp32s3_idf/: CMakeLists.txt  sdkconfig.old
firmware/gateway_esp32s3_idf/main/: app_runtime.c  idf_component.yml  main.c
firmware/nodes_platformio/: deep-focus.code-workspace  platformio.ini
firmware/nodes_platformio/include/: ir_dump_esp8266.h  secrets.h  sensor_node.h  sensor_node_esp32.h
firmware/nodes_platformio/src/: main.cpp
firmware/shared_components/wifi_nvs/: CMakeLists.txt
host_app/: app.py  index.html
host_app/data/: telemetry.csv
(+20 files in other folders)
