idf_component_register(
    SRCS 
        "main.c"
        "app_runtime.c"
    INCLUDE_DIRS 
        include
    REQUIRES 
        esp_lcd 
        esp_driver_i2c 
        esp_timer 
        lvgl 
        esp_netif
        global
        wifi_connect
        dht_reader
        i2c_oled
        uart_bridge
)
